examples/invalid/missing_parenthesis.mini
# Ошибка: отсутствует закрывающая скобка
(2+3
